--- a/index.html
+++ b/index.html
@@ -19,25 +19,29 @@
         <li class="dropdown">
           <a class="dropbtn">Features</a>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <p id="orange">❤ Learn how Nifty inspires productivity!</p>
+            <p><a href="#">Discussions</a><a href="#">Milestones(Gantt Chart)</a></p>
+            <p><a href="#">Tasks</a><a href="#">Doc & Files</a></p>
+            <p><a href="#">Time Tracking</a><a href="#">Reporting</a></p>
+            <p><a href="#">Project Home</a><a href="#">Project Portfolios</a></p>
           </div>
         </li>
         <li class="dropdown">
           <a class="dropbtn">Use Cases</a>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <p id="orange">❤ Nifty is very flexible. Here are a few examples of how you can use it.</p>
+            <p><a href="#">Agile Development</a><a href="#">Client Management</a></p>
+            <p><a href="#">Digital Agencies</a><a href="#">Legal Cases Management</a></p>
+            <p><a href="#">Marketing teams</a><a href="#">Product Teams</a></p>
           </div>
         </li>
         <li class="dropdown">
           <a class="dropbtn">Resources</a>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <p><a href="#">Apps</a><a href="#">Blog</a></p>
+            <p><a href="#">Tasks</a><a href="#">Doc & Files</a></p>
+            <p><a href="#">Integrations</a><a href="#">Help Center</a></p>
+            <p><a href="#">Security</a><a href="#">Get a Demo</a></p>
           </div>
         </li>
         <li><a href="#home">Got Clients?</a></li>
