--- a/features_discussion.html
+++ b/features_discussion.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discussions</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="features_discussion.css">
+    <link rel="stylesheet" href="nav.css">
     
 </head>
 <body>
+  <div class="container">
+    <div id="nav">
+      <ul id="nav-left">
+        <li><img src="https://niftypm.com/_nuxt/img/nifty-logo.c577d9d.svg"/></li>
+        <li class="dropdown">
+          <a class="dropbtn">Features</a>
+          <div class="dropdown-content">
+            <p id="orange">❤ Learn how Nifty inspires productivity!</p>
+            <p><a href="#">Discussions</a><a href="#">Milestones(Gantt Chart)</a></p>
+            <p><a href="#">Tasks</a><a href="#">Doc & Files</a></p>
+            <p><a href="#">Time Tracking</a><a href="#">Reporting</a></p>
+            <p><a href="#">Project Home</a><a href="#">Project Portfolios</a></p>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a class="dropbtn">Use Cases</a>
+          <div class="dropdown-content">
+            <p id="orange">❤ Nifty is very flexible. Here are a few examples of how you can use it.</p>
+            <p><a href="#">Agile Development</a><a href="#">Client Management</a></p>
+            <p><a href="#">Digital Agencies</a><a href="#">Legal Cases Management</a></p>
+            <p><a href="#">Marketing teams</a><a href="#">Product Teams</a></p>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a class="dropbtn">Resources</a>
+          <div class="dropdown-content">
+            <p><a href="#">Apps</a><a href="#">Blog</a></p>
+            <p><a href="#">Tasks</a><a href="#">Doc & Files</a></p>
+            <p><a href="#">Integrations</a><a href="#">Help Center</a></p>
+            <p><a href="#">Security</a><a href="#">Get a Demo</a></p>
+          </div>
+        </li>
+        <li><a href="#home">Got Clients?</a></li>
+        <li><a href="#news">Pricing</a></li>
+      </ul>
+      <ul id="nav-right">
+        <li><button>Get a Demo</button></li>
+        <li><a href="#news">Log in <span>&#8594;</span> </a></li>
+      </ul>
+    </div>
+    <div id="clear"></div>
+  </div>
     <div id="knowled">
         <h4>@ DISCUSSION</h4>
         <h1>Establish a knowledge hub.</h1>
