Javascript added part1

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <li><a href="#news">Pricing</a></li>
       </ul>
       <ul id="nav-right">
-        <li><button>Get a Demo</button></li>
-        <li><a href="#news">Log in <span>&#8594;</span> </a></li>
+        <li><button id="btn">Get a Demo</button></li>
+        <li ><a href="#news">Log in <span>&#8594;</span> </a></li>
       </ul>
     </div>
     <div id="clear"></div>
@@ -64,7 +64,7 @@
         <p>Stop switching between Chats, Tasks, Docs, Calendar, & Meeting tools — bring your team & clients together in one simple, yet powerful app.</p>
         <div id="box-awarded-left-input">
           <input type="text" placeholder="name@company.com"/>
-          <button>Try Nifty for Free</button>
+          <button id="btn2">Try Nifty for Free</button>
         </div>
         <h5>OR</h5>
         <button id="signup"> <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>Sign Up with Google</button>
@@ -100,50 +100,50 @@
       <h1>Say goodbye to status meetings!</h1>
       <p>Create a clear plan of action for your projects and automate your progress tracking.</p>
       <div id="animation">
-        <button>1</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>2</button>
-        <button>.</button> 
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>3</button>
-        <button>.</button>        
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>4</button>
-        <button>.</button>        
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>.</button>
-        <button>5</button>
+        <button id="anibutton"></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button id="anibutton1"></button>
+        <button><a href="">.</a></button> 
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button id="anibutton2"></button>
+        <button><a href="">.</a></button>        
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button id="anibutton3"></button>
+        <button><a href="">.</a></button>        
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button><a href="">.</a></button>
+        <button id="anibutton4"></button>
       </div>
       <diV id="btn-text">
         <p>SET GOALS & TIMELINES</p>
@@ -339,5 +339,6 @@
     </div>
     <!-- footer end -->
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
