--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a class="dropbtn">Features</a>
           <div class="dropdown-content">
             <p id="orange">❤ Learn how Nifty inspires productivity!</p>
-            <p><a href="#">Discussions</a><a href="#">Milestones(Gantt Chart)</a></p>
+            <p><a href="pages/features_discussion.html">Discussions</a><a href="#">Milestones(Gantt Chart)</a></p>
             <p><a href="#">Tasks</a><a href="#">Doc & Files</a></p>
             <p><a href="#">Time Tracking</a><a href="#">Reporting</a></p>
             <p><a href="#">Project Home</a><a href="#">Project Portfolios</a></p>
@@ -31,7 +31,7 @@
           <a class="dropbtn">Use Cases</a>
           <div class="dropdown-content">
             <p id="orange">❤ Nifty is very flexible. Here are a few examples of how you can use it.</p>
-            <p><a href="#">Agile Development</a><a href="#">Client Management</a></p>
+            <p><a href="#">Agile Development</a><a href="pages/client.html">Client Management</a></p>
             <p><a href="#">Digital Agencies</a><a href="#">Legal Cases Management</a></p>
             <p><a href="#">Marketing teams</a><a href="#">Product Teams</a></p>
           </div>
@@ -39,18 +39,18 @@
         <li class="dropdown">
           <a class="dropbtn">Resources</a>
           <div class="dropdown-content">
-            <p><a href="#">Apps</a><a href="#">Blog</a></p>
+            <p><a href="pages/apps.html">Apps</a><a href="#">Blog</a></p>
             <p><a href="#">Tasks</a><a href="#">Doc & Files</a></p>
             <p><a href="#">Integrations</a><a href="#">Help Center</a></p>
             <p><a href="#">Security</a><a href="#">Get a Demo</a></p>
           </div>
         </li>
-        <li><a href="#home">Got Clients?</a></li>
-        <li><a href="#news">Pricing</a></li>
+        <li><a href="pages/client.html">Got Clients?</a></li>
+        <li><a href="pages/pricing.html">Pricing</a></li>
       </ul>
       <ul id="nav-right">
         <li><button id="btn">Get a Demo</button></li>
-        <li ><a href="#news">Log in <span>&#8594;</span> </a></li>
+        <li ><a href="pages/login.html">Log in <span>&#8594;</span> </a></li>
       </ul>
     </div>
     <div id="clear"></div>
