--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
       </div>
       <div id="footer6">
         <p>FROM THE BLOG</p>
-        <p>Why project management is broken (& how to fix it! <a>Read <span>&#10148;</span></a></p>
-        <p>Why Remote Collaboration is more than just Communication  <a>Read <span>&#10148;</span></a></p>
-        <p>How to improve productivity with project portfolios   <a>Read <span>&#10148;</span></a></p>
-        <p>Staying on top of your workloads with time tracking  <a>Read <span>&#10148;</span></a></p>
-        <p>Best Legal Case Management Software for Law Firms  <a>Read <span>&#10148;</span></a></p>
+        <p>Why project management is broken (& how to fix it! <a>Read </a> <span>&#10148;</span></p>
+        <p>Why Remote Collaboration is more than just Communication  <a>Read </a><span>&#10148;</span></p>
+        <p>How to improve productivity with project portfolios   <a>Read </a><span>&#10148;</span></p>
+        <p>Staying on top of your workloads with time tracking  <a>Read </a><span>&#10148;</span></p>
+        <p>Best Legal Case Management Software for Law Firms  <a>Read </a><span>&#10148;</span></p>
       </div>
     </div>
     <!-- footer end -->
