--- a/pages/apps.html
+++ b/pages/apps.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/apps.css">
     <link rel="stylesheet" href="../css/nav.css">
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 </head>
 <body>
   <div class="container">
@@ -61,10 +63,10 @@
           <p>Take Nifty on the go and manage tasks, track progress, and collaborate with your teammates from anywhere!</p>
       </div>
       <div class="logo">
-          <img src="" alt="logo1">
-          <img src="" alt="logo2">
-          <img src="" alt="logo3">
-          <img src="" alt="logo4">
+          <img src="https://niftypm.com/_nuxt/img/ico-apple.28f423a.png" alt="logo1">
+          <img src="https://niftypm.com/_nuxt/img/ico-android.21e1480.png" alt="logo2">
+          <img src="https://niftypm.com/_nuxt/img/ico-mac.cad5cfb.png" alt="logo3">
+          <img src="https://niftypm.com/_nuxt/img/ico-windows.4e2b176.png" alt="logo4">
       </div>
       <div class="name_logo">
           <h5>iOS</h5>
@@ -72,10 +74,11 @@
           <h5>MAC</h5>
           <h5>WINDOWS</h5>
       </div>
-      <div class="img_1st">
-          <img src="https://niftypm.com/_nuxt/img/large@1x.5de3bf7.webp">
-      </div>
+      <div style="clear: both;"></div>
       <!-- transform start -->
+      <div class="img_1st">
+        <img src="https://niftypm.com/_nuxt/img/large@1x.5de3bf7.webp">
+    </div>
     <div id="transform">
         <div id="trans">
           <div id="trans-left">
