--- a/pages/features_discussion.html
+++ b/pages/features_discussion.html
@@ -65,9 +65,9 @@
         <input type="email" id="email" placeholder="name@company.com"> 
        </div> 
         <button>Try Nifty for Free</button>
-        <p>or</p>
+        <p>OR</p>
         <div>
-            <a href="#"><img src="https://img.icons8.com/color/452/google-logo.png" alt="hi"></a>
+            <a href="https://www.google.com/"><img src="https://img.icons8.com/color/452/google-logo.png" alt="hi"></a>
         </div>
     </div>
     <div id="inf-cc">
