--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="nav">
       <ul id="nav-left">
-        <li><img src="https://niftypm.com/_nuxt/img/nifty-logo.c577d9d.svg"/></li>
+        <li><a href="index.html"><img src="https://niftypm.com/_nuxt/img/nifty-logo.c577d9d.svg"/></a></li>
         <li class="dropdown">
           <a class="dropbtn">Features</a>
           <div class="dropdown-content">
