--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -574,6 +574,25 @@
     </div>
     <!-- footer end -->
   </div>
-<script src="../js/script.js"></script>
+<script>
+  function check(){
+  var checkBox = document.getElementById("checkbox");
+  var text1 = document.getElementsByClassName("text1");
+  var text2 = document.getElementsByClassName("text2");
+
+  for (var i=0; i < text1.length; i++){
+      if(checkBox.checked == true){
+          text1[i].style.display = "none";
+          text2[i].style.display = "block";
+      }
+      else if (checkBox.checked == false){
+          text1[i].style.display = "block";
+          text2[i].style.display = "none";
+      }
+  }
+}
+
+check();
+</script>
 </body>
 </html>
